k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokestack-ingress
  namespace: smokestack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: smokestack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokestack-api-svc
                port:
                  number: 80
